--- a/Day1-ChangeBackgroundColor/index.html
+++ b/Day1-ChangeBackgroundColor/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>  
     <main id="page">
-        <button class="button" onclick="changeColor()">Change Color</button>
+        <h1 id="color">#000000</h1>
+        <button id="button" class="button" onclick="changeColor()">Change Color</button>
     </main>
 </body>
 <script src="./index.js"></script>
