--- a/Day1-ChangeBackgroundColor/index.html
+++ b/Day1-ChangeBackgroundColor/index.html
@@ -1,17 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
-    <title>Document</title>
-</head>
-<body>  
-    <main id="page">
-        <h1 id="color">#000000</h1>
-        <button id="button" class="button" onclick="changeColor()">Change Color</button>
-    </main>
-</body>
-<script src="./index.js"></script>
-</html></html>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="./style.css" />
+        <title>Document</title>
+    </head>
+    <body>
+        <main id="page">
+            <div class="left">
+                <h1 id="color">#000000</h1>
+                <button id="button" class="button" onclick="changeColor()">
+                    Change Color
+                </button>
+            </div>
+            <div class="right">
+                <div class="hue1"></div>
+                <div class="hue2"></div>
+                <div class="hue3"></div>
+            </div>
+        </main>
+    </body>
+    <script src="./index.js"></script>
+</html>
