--- a/Day1-ChangeBackgroundColor/index.html
+++ b/Day1-ChangeBackgroundColor/index.html
@@ -10,7 +10,7 @@
     <body>
         <main id="page">
             <div class="left">
-                <h1 id="color">#000000</h1>
+                <h1 id="color">hsl(0, 0%, 0%)</h1>
                 <button id="button" class="button" onclick="changeColor()">
                     Change Color
                 </button>
