--- a/Day1-ChangeBackgroundColor/index.html
+++ b/Day1-ChangeBackgroundColor/index.html
@@ -16,9 +16,9 @@
                 </button>
             </div>
             <div class="right">
-                <div class="hue1"></div>
-                <div class="hue2"></div>
-                <div class="hue3"></div>
+                <div class="hue" id="hue1"><h2>hsl(0, 0%, 0%)</h2></div>
+                <div class="hue" id="hue2"><h2>hsl(0, 0%, 0%)</h2></div>
+                <div class="hue" id="hue3"><h2>hsl(0, 0%, 0%)</h2></div>
             </div>
         </main>
     </body>
