Implemented The copy buttons for colors. Project 1 Finished

--- a/Day1-ChangeBackgroundColor/index.html
+++ b/Day1-ChangeBackgroundColor/index.html
@@ -14,11 +14,21 @@
                 <button id="button" class="button" onclick="changeColor()">
                     Change Color
                 </button>
+                <button class="copy" id="copyMain">Copy</button>
             </div>
             <div class="right">
-                <div class="hue" id="hue1"><h2>hsl(0, 0%, 0%)</h2></div>
-                <div class="hue" id="hue2"><h2>hsl(0, 0%, 0%)</h2></div>
-                <div class="hue" id="hue3"><h2>hsl(0, 0%, 0%)</h2></div>
+                <div class="hue" id="hue1">
+                    <h2 id="hue1Name">hsl(0, 0%, 0%)</h2>
+                    <button id="copy1" class="copy">Copy</button>
+                </div>
+                <div class="hue" id="hue2">
+                    <h2 id="hue2Name">hsl(0, 0%, 0%)</h2>
+                    <button id="copy2" class="copy">Copy</button>
+                </div>
+                <div class="hue" id="hue3">
+                    <h2 id="hue3Name">hsl(0, 0%, 0%)</h2>
+                    <button id="copy3" class="copy">Copy</button>
+                </div>
             </div>
         </main>
     </body>
