--- a/Day3-DiceeGame/index.html
+++ b/Day3-DiceeGame/index.html
@@ -5,20 +5,36 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="./style.css" />
-        <title>Dicee Game</title>
+        <title>Dice Game</title>
     </head>
     <body>
+        <img class="image" src="./winner.png" alt="winner" />
         <h1>Player 1 Wins!</h1>
         <div class="players">
             <div class="player">
                 <span>Player1</span>
-                <div class="player1"></div>
+                <div class="player1 dice">
+                    <div class="bullet"></div>
+                    <div class="bullet"></div>
+                    <div class="bullet"></div>
+                    <div class="bullet"></div>
+                    <div class="bullet"></div>
+                    <div class="bullet"></div>
+                </div>
             </div>
             <div class="player">
                 <span>Player2</span>
-                <div class="player2"></div>
+                <div class="player2 dice">
+                    <div class="bullet"></div>
+                    <div class="bullet"></div>
+                    <div class="bullet"></div>
+                    <div class="bullet"></div>
+                    <div class="bullet"></div>
+                    <div class="bullet"></div>
+                </div>
             </div>
         </div>
+        <button class="play">Play</button>
     </body>
     <script src="./index.js"></script>
 </html>
