Start function and random Number function

--- a/Day3-DiceeGame/index.html
+++ b/Day3-DiceeGame/index.html
@@ -34,7 +34,7 @@
                 </div>
             </div>
         </div>
-        <button class="play">Play</button>
+        <button class="play" onclick="start()">Play</button>
     </body>
     <script src="./index.js"></script>
 </html>
