--- a/Day3-DiceeGame/index.html
+++ b/Day3-DiceeGame/index.html
@@ -13,25 +13,11 @@
         <div class="players">
             <div class="player">
                 <span>Player1</span>
-                <div class="player1 dice">
-                    <div class="bullet"></div>
-                    <div class="bullet"></div>
-                    <div class="bullet"></div>
-                    <div class="bullet"></div>
-                    <div class="bullet"></div>
-                    <div class="bullet"></div>
-                </div>
+                <div class="player1 dice"></div>
             </div>
             <div class="player">
                 <span>Player2</span>
-                <div class="player2 dice">
-                    <div class="bullet"></div>
-                    <div class="bullet"></div>
-                    <div class="bullet"></div>
-                    <div class="bullet"></div>
-                    <div class="bullet"></div>
-                    <div class="bullet"></div>
-                </div>
+                <div class="player2 dice"></div>
             </div>
         </div>
         <button class="play" onclick="start()">Play</button>
