--- a/Day4-DrumKit/index.html
+++ b/Day4-DrumKit/index.html
@@ -13,13 +13,15 @@
     </head>
     <body>
         <h1 class="title">Drum Kit</h1>
-        <button class="drum w">w</button>
-        <button class="drum a">a</button>
-        <button class="drum s">s</button>
-        <button class="drum d">d</button>
-        <button class="drum j">j</button>
-        <button class="drum k">k</button>
-        <button class="drum l">l</button>
+        <div class="set">
+            <button class="drum w">w</button>
+            <button class="drum a">a</button>
+            <button class="drum s">s</button>
+            <button class="drum d">d</button>
+            <button class="drum j">j</button>
+            <button class="drum k">k</button>
+            <button class="drum l">l</button>
+        </div>
     </body>
     <script src="./index.js"></script>
 </html>
