--- a/Day5-SimonGame/index.html
+++ b/Day5-SimonGame/index.html
@@ -6,8 +6,19 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Simon Game</title>
         <link rel="stylesheet" href="./style.css" />
+        <link
+            href="https://fonts.googleapis.com/css?family=Fira+Code:300,regular,500,600,700"
+            rel="stylesheet"
+        />
     </head>
     <body>
+        <h1>Press A Key to Start</h1>
+        <div class="buttons">
+            <button class="green button"></button>
+            <button class="red button"></button>
+            <button class="yellow button"></button>
+            <button class="blue button"></button>
+        </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
         <script src="./index.js"></script>
     </body>
