Function to random extract a color from array

--- a/Day5-SimonGame/index.html
+++ b/Day5-SimonGame/index.html
@@ -14,7 +14,7 @@
     <body>
         <h1>Press A Key to Start</h1>
         <div class="buttons">
-            <button class="green button"></button>
+            <button class="green button">fdfd</button>
             <button class="red button"></button>
             <button class="yellow button"></button>
             <button class="blue button"></button>
