--- a/Day5-SimonGame/index.html
+++ b/Day5-SimonGame/index.html
@@ -14,10 +14,10 @@
     <body>
         <h1>Press A Key to Start</h1>
         <div class="buttons">
-            <button class="green button">fdfd</button>
-            <button class="red button"></button>
-            <button class="yellow button"></button>
-            <button class="blue button"></button>
+            <button class="green button" id="green"></button>
+            <button class="red button" id="red"></button>
+            <button class="yellow button" id="yellow"></button>
+            <button class="blue button" id="blue"></button>
         </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
         <script src="./index.js"></script>
